<resources>
    <string name="app_name">My Application</string>
    <string name="password">Password</string>
    <string name="lista_de_correo">Lista de Correo</string>
    <string name="registrarse">Registrarse</string>
    <string name="ingresar">Ingresar</string>
    <string name="email">Email</string>
    <string name="todo">TODO</string>
    <string name="TuNombre">tu_nombre</string>
    <string name="tu_nombre">tu Nombre</string>
    <string name="tu_email">tu Email</string>
    <string name="fecha_nacimiento">Fecha nacimiento</string>
</resources>